# rumal

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rumal.kdev4
.kdev4/: rumal.kdev4
docs/: index.rst
examples/: CMakeLists.txt  ex01.cpp  ex02.cpp  ex03.cpp
includes/rumal/: base.hpp  declares.hpp  dom.hpp  indented.h  jquery.hpp  js.hpp  rumal.h  rumal.hpp  sketch.txt  types.hpp
tests/: CMakeLists.txt  aql.cpp  generator.cpp  js.cpp
